# ps4_store_p2p

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  config.ini  extract_openorbis.sh  install.ps1  install.sh  install_prerequisites.ps1  setup_openorbis.ps1  setup_sdl2.sh
cmake/: PS4Toolchain.cmake
docs/: TECHNICAL.md  USER_GUIDE.md
include/p2p/: torrent_manager.h
include/pkg/: pkg_manager.h
include/ui/: main_window.h
include/utils/: utils.h
src/: main.cpp
src/p2p/: torrent_manager.cpp
src/pkg/: pkg_manager.cpp
src/ui/: main_window.cpp
src/utils/: utils.cpp
tests/: test_main.cpp
tools/: create_pkg.ps1  install_ps4.ps1
